--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 nu-plugin = "0.92.2"
 nu-protocol = "0.92.2"
+reqwest = { version = "0.12.4", features = ["blocking"] }
