introduce tokio runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 nu-plugin = "0.92.2"
 nu-protocol = "0.92.2"
 reqwest = { version = "0.12.4", features = ["blocking"] }
+tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
