--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 nu-plugin = "0.92.2"
 nu-protocol = "0.92.2"
 reqwest = { version = "0.12.4", features = ["blocking"] }
-tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.37.0", features = ["full"] }
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 bytes = "1.6.0"
