--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ hyper = { version = "1.3.1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 bytes = "1.6.0"
 http-body-util = "0.1.1"
+tokio-stream = "0.1.15"
+futures-util = "0.3.30"
