--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nu-plugin = "0.92.2"
-nu-protocol = "0.92.2"
-reqwest = { version = "0.12.4", features = ["blocking"] }
+nu-plugin = "0.93"
+nu-protocol = "0.93"
 tokio = { version = "1.37.0", features = ["full"] }
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 bytes = "1.6.0"
+http = "1.1.0"
 http-body-util = "0.1.1"
 tokio-stream = "0.1.15"
