--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nu-plugin = "0.93"
-nu-protocol = "0.93"
 tokio = { version = "1.37.0", features = ["full"] }
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
@@ -16,3 +14,10 @@ http = "1.1.0"
 http-body-util = "0.1.1"
 tokio-stream = "0.1.15"
 http-body = "1.0.0"
+
+# nu-plugin = "0.93"
+# nu-protocol = "0.93"
+
+nu-plugin = { git = "https://github.com/nushell/nushell.git", branch = "main" }
+nu-protocol = { git = "https://github.com/nushell/nushell.git", branch = "main", features = ["plugin"] }
+
