--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ http-body-util = "0.1.1"
 tokio-stream = "0.1.15"
 http-body = "1.0.0"
 
-# nu-plugin = "0.93"
-# nu-protocol = "0.93"
+nu-plugin = "0.94.2"
+nu-protocol = "0.94.2"
 
-nu-plugin = { git = "https://github.com/nushell/nushell.git", branch = "main" }
-nu-protocol = { git = "https://github.com/nushell/nushell.git", branch = "main", features = ["plugin"] }
+# nu-plugin = { git = "https://github.com/nushell/nushell.git", branch = "main" }
+# nu-protocol = { git = "https://github.com/nushell/nushell.git", branch = "main", features = ["plugin"] }
 
