--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ http-body = "1.0.0"
 # nu-plugin = "0.94.2"
 # nu-protocol = "0.94.2"
 
-nu-plugin = { git = "file:///Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell", branch = "main" }
-nu-protocol = { git = "file:///Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell", branch = "main", features = ["plugin"] }
+nu-plugin = { path = "/Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell/crates/nu-plugin"}
+nu-protocol = { path = "/Users/andy/.s/sessions/03B73LNTW7UJJP1EWGDQMZNH3/nushell/crates/nu-protocol"}
 
